split apart rewrites for old slugs

--- a/nginx/config/genomena.conf
+++ b/nginx/config/genomena.conf
@@ -117,12 +117,18 @@ server {
     if ($arg_page_id = 126) {  return 301 /2009/04/21/on-polymorphism-iii-working-with-peanuts; }
     if ($arg_page_id = 637) {  return 301 /2009/04/21/on-polymorphism-iii-working-with-peanuts; }
 
-    rewrite ^(/1998/01/01)?/human-genetic-fieldwork-in-iran(?:/index.html?|.html?|/)?$ /1998/01/01/iran-genetics permanent;
-    rewrite ^(/1998/01/01)?/how-to-find-poetry-in-shiraz(?:/index.html?|.html?|/)?$ /1998/01/01/poetry permanent;
-    rewrite ^(/2009/03/10)?/cloning-part-four-identity(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-four-our-genomes-ourselves permanent;
-    rewrite ^(/2009/03/10)?/cloning-part-one-the-ballad-of-bill-s812(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-one-the-ballad-of-bill-s-812 permanent;
-    rewrite ^(/2009/03/11)?/whats-in-a-surname(?:/index.html?|.html?|/)?$ /2009/03/11/whats-in-a-surename permanent;
-    rewrite ^(/2009/04/10)?/in-a-word-polymorphism(?:/index.html?|.html?|/)?$ /2009/05/01/polymorphism-i permanent;
+    rewrite ^/1998/01/01/human-genetic-fieldwork-in-iran(?:/index.html?|.html?|/)?$ /1998/01/01/iran-genetics permanent;
+    rewrite ^/human-genetic-fieldwork-in-iran(?:/index.html?|.html?|/)?$ /1998/01/01/iran-genetics permanent;
+    rewrite ^/1998/01/01/how-to-find-poetry-in-shiraz(?:/index.html?|.html?|/)?$ /1998/01/01/poetry permanent;
+    rewrite ^/how-to-find-poetry-in-shiraz(?:/index.html?|.html?|/)?$ /1998/01/01/poetry permanent;
+    rewrite ^/2009/03/10/cloning-part-four-identity(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-four-our-genomes-ourselves permanent;
+    rewrite ^/cloning-part-four-identity(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-four-our-genomes-ourselves permanent;
+    rewrite ^/2009/03/10/cloning-part-one-the-ballad-of-bill-s812(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-one-the-ballad-of-bill-s-812 permanent;
+    rewrite ^/cloning-part-one-the-ballad-of-bill-s812(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-one-the-ballad-of-bill-s-812 permanent;
+    rewrite ^/2009/03/11/whats-in-a-surname(?:/index.html?|.html?|/)?$ /2009/03/11/whats-in-a-surename permanent;
+    rewrite ^/whats-in-a-surname(?:/index.html?|.html?|/)?$ /2009/03/11/whats-in-a-surename permanent;
+    rewrite ^/2009/04/10/in-a-word-polymorphism(?:/index.html?|.html?|/)?$ /2009/05/01/polymorphism-i permanent;
+    rewrite ^/in-a-word-polymorphism(?:/index.html?|.html?|/)?$ /2009/05/01/polymorphism-i permanent;
 
     rewrite ^/cancers(?:/index.html?|.html?|/)?$ /2012/04/19/why-cancers-are-the-least-and-most-genetic-of-diseases permanent;
     rewrite ^/hela(?:/index.html?|.html?|/)?$ /2013/04/01/the-shock-of-the-new-what-we-can-say-about-helas-novel-variants permanent;
