use explicit rewrites for all existing pages
this lets us throw a 404 on the first request, not after a 301

--- a/nginx/config/genomena.conf
+++ b/nginx/config/genomena.conf
@@ -130,6 +130,37 @@ server {
     rewrite ^/2009/04/10/in-a-word-polymorphism(?:/index.html?|.html?|/)?$ /2009/05/01/polymorphism-i permanent;
     rewrite ^/in-a-word-polymorphism(?:/index.html?|.html?|/)?$ /2009/05/01/polymorphism-i permanent;
 
+    rewrite ^/1998/01/01/ethics-in-genome-diversity-fieldwork(?:/index.html?|.html?|/)$ /1998/01/01/ethics-in-genome-diversity-fieldwork permanent;
+    rewrite ^/1998/01/01/iran-genetics(?:/index.html?|.html?|/)$ /1998/01/01/iran-genetics permanent;
+    rewrite ^/1998/01/01/poetry(?:/index.html?|.html?|/)$ /1998/01/01/poetry permanent;
+    rewrite ^/1998/01/01/st-louis-to-samarkand-a-tale-of-two-chromosomes(?:/index.html?|.html?|/)$ /1998/01/01/st-louis-to-samarkand-a-tale-of-two-chromosomes permanent;
+    rewrite ^/1998/01/01/yurt-life(?:/index.html?|.html?|/)$ /1998/01/01/yurt-life permanent;
+    rewrite ^/2009/03/10/cloning-epilogue(?:/index.html?|.html?|/)$ /2009/03/10/cloning-epilogue permanent;
+    rewrite ^/2009/03/10/cloning-part-five-eugenics(?:/index.html?|.html?|/)$ /2009/03/10/cloning-part-five-eugenics permanent;
+    rewrite ^/2009/03/10/cloning-part-four-our-genomes-ourselves(?:/index.html?|.html?|/)$ /2009/03/10/cloning-part-four-our-genomes-ourselves permanent;
+    rewrite ^/2009/03/10/cloning-part-one-the-ballad-of-bill-s-812(?:/index.html?|.html?|/)$ /2009/03/10/cloning-part-one-the-ballad-of-bill-s-812 permanent;
+    rewrite ^/2009/03/10/cloning-part-six-poverty-and-exploitation(?:/index.html?|.html?|/)$ /2009/03/10/cloning-part-six-poverty-and-exploitation permanent;
+    rewrite ^/2009/03/10/cloning-part-three-eve(?:/index.html?|.html?|/)$ /2009/03/10/cloning-part-three-eve permanent;
+    rewrite ^/2009/03/10/cloning-part-two-hearsay-hearsay(?:/index.html?|.html?|/)$ /2009/03/10/cloning-part-two-hearsay-hearsay permanent;
+    rewrite ^/2009/03/10/the-new-emperors-clones-obamas-refreshing-but-tepid-embrace-of-reasoned-scitech-policy(?:/index.html?|.html?|/)$ /2009/03/10/the-new-emperors-clones-obamas-refreshing-but-tepid-embrace-of-reasoned-scitech-policy permanent;
+    rewrite ^/2009/03/11/whats-in-a-surename(?:/index.html?|.html?|/)$ /2009/03/11/whats-in-a-surename permanent;
+    rewrite ^/2009/03/15/second-life(?:/index.html?|.html?|/)$ /2009/03/15/second-life permanent;
+    rewrite ^/2009/04/20/on-polymorphism-ii-hard-drinking-fruitflies(?:/index.html?|.html?|/)$ /2009/04/20/on-polymorphism-ii-hard-drinking-fruitflies permanent;
+    rewrite ^/2009/04/21/on-polymorphism-iii-working-with-peanuts(?:/index.html?|.html?|/)$ /2009/04/21/on-polymorphism-iii-working-with-peanuts permanent;
+    rewrite ^/2009/05/01/polymorphism-i(?:/index.html?|.html?|/)$ /2009/05/01/polymorphism-i permanent;
+    rewrite ^/2012/04/04/on-twins-genomes-and-health(?:/index.html?|.html?|/)$ /2012/04/04/on-twins-genomes-and-health permanent;
+    rewrite ^/2012/04/19/why-cancers-are-the-least-and-most-genetic-of-diseases(?:/index.html?|.html?|/)$ /2012/04/19/why-cancers-are-the-least-and-most-genetic-of-diseases permanent;
+    rewrite ^/2012/05/28/rare-variants-disease-and-population-size(?:/index.html?|.html?|/)$ /2012/05/28/rare-variants-disease-and-population-size permanent;
+    rewrite ^/2012/06/24/the-myriad-throng-human-effective-population-size(?:/index.html?|.html?|/)$ /2012/06/24/the-myriad-throng-human-effective-population-size permanent;
+    rewrite ^/2012/08/30/third-generation-sequencing(?:/index.html?|.html?|/)$ /2012/08/30/third-generation-sequencing permanent;
+    rewrite ^/2013/03/15/genodicy(?:/index.html?|.html?|/)$ /2013/03/15/genodicy permanent;
+    rewrite ^/2013/03/22/harmful-by-any-other-name-on-clinical-variant-classification-2(?:/index.html?|.html?|/)$ /2013/03/22/harmful-by-any-other-name-on-clinical-variant-classification-2 permanent;
+    rewrite ^/2013/04/01/the-shock-of-the-new-what-we-can-say-about-helas-novel-variants(?:/index.html?|.html?|/)$ /2013/04/01/the-shock-of-the-new-what-we-can-say-about-helas-novel-variants permanent;
+    rewrite ^/2013/05/22/harmful-by-any-other-name-on-clinical-variant-classification(?:/index.html?|.html?|/)$ /2013/05/22/harmful-by-any-other-name-on-clinical-variant-classification permanent;
+    rewrite ^/2013/08/26/three-small-steps-toward-genomically-sensible-healthcare(?:/index.html?|.html?|/)$ /2013/08/26/three-small-steps-toward-genomically-sensible-healthcare permanent;
+    rewrite ^/2014/04/06/threesomics(?:/index.html?|.html?|/)$ /2014/04/06/threesomics permanent;
+    rewrite ^/about(?:/index.html?|.html?|/)$ /about permanent;
+
     rewrite ^/cancers(?:/index.html?|.html?|/)?$ /2012/04/19/why-cancers-are-the-least-and-most-genetic-of-diseases permanent;
     rewrite ^/hela(?:/index.html?|.html?|/)?$ /2013/04/01/the-shock-of-the-new-what-we-can-say-about-helas-novel-variants permanent;
     rewrite ^/ne(?:/index.html?|.html?|/)?$ /2012/06/24/the-myriad-throng-human-effective-population-size permanent;
@@ -169,10 +200,7 @@ server {
     rewrite ^/why-cancers-are-the-least-and-most-genetic-of-diseases(?:/index.html?|.html?|/)?$ /2012/04/19/why-cancers-are-the-least-and-most-genetic-of-diseases permanent;
     rewrite ^/yurt-life(?:/index.html?|.html?|/)?$ /1998/01/01/yurt-life permanent;
 
-    rewrite ^/(.*)/index.html?$ /$1 permanent; # strip index.html from dir
-    rewrite ^/index.html?$ / permanent; # special case for root
-    rewrite ^/(.*).html?$ /$1 permanent; # strip html/htm extension
-    rewrite ^/(.*)/$ /$1 permanent; # strip trailing slash
+    rewrite ^/index.html?$ / permanent;
 
     root /usr/share/nginx/html/genomena.com;
     index index.html; # we'll be having none of that .htm nonsense
