add redirects for older category URLs

--- a/nginx/config/genomena.conf
+++ b/nginx/config/genomena.conf
@@ -164,13 +164,27 @@ server {
     rewrite ^/cloning-part-six-poverty-and-exploitation(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-six-poverty-and-exploitation permanent;
     rewrite ^/cloning-part-three-eve(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-three-eve permanent;
     rewrite ^/cloning-part-two-hearsay-hearsay(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-two-hearsay-hearsay permanent;
+    rewrite ^/concepts-genetics-jargon/polymorphism-2/polymorphism-iii(?:/index.html?|.html?|/)?$ /2009/04/21/on-polymorphism-iii-working-with-peanuts permanent;
+    rewrite ^/concepts-genetics-jargon/polymorphism-ii(?:/index.html?|.html?|/)?$ /2009/04/20/on-polymorphism-ii-hard-drinking-fruitflies permanent;
+    rewrite ^/concepts-genetics-jargon/polymorphism-iii(?:/index.html?|.html?|/)?$ /2009/04/21/on-polymorphism-iii-working-with-peanuts permanent;
+    rewrite ^/concepts-genetics-jargon/polymorphism(?:/index.html?|.html?|/)?$ /2009/05/01/polymorphism-i permanent;
+    rewrite ^/concepts-genetics-jargon/second-life(?:/index.html?|.html?|/)?$ /2009/03/15/second-life permanent;
     rewrite ^/ethics-in-genome-diversity-fieldwork(?:/index.html?|.html?|/)?$ /1998/01/01/ethics-in-genome-diversity-fieldwork permanent;
     rewrite ^/genodicy(?:/index.html?|.html?|/)?$ /2013/03/15/genodicy permanent;
+    rewrite ^/genomes-and-health/on-twins-genomes-and-health(?:/index.html?|.html?|/)?$ /2012/04/04/on-twins-genomes-and-health permanent;
+    rewrite ^/genomes-and-health/rare-variants-disease-and-population-size(?:/index.html?|.html?|/)?$ /2012/05/28/rare-variants-disease-and-population-size permanent;
+    rewrite ^/genomes-and-health/why-cancers-are-the-least-and-most-genetic-of-diseases(?:/index.html?|.html?|/)?$ /2012/04/19/why-cancers-are-the-least-and-most-genetic-of-diseases permanent;
     rewrite ^/harmful-by-any-other-name-on-clinical-variant-classification-2(?:/index.html?|.html?|/)?$ /2013/03/22/harmful-by-any-other-name-on-clinical-variant-classification-2 permanent;
     rewrite ^/harmful-by-any-other-name-on-clinical-variant-classification(?:/index.html?|.html?|/)?$ /2013/05/22/harmful-by-any-other-name-on-clinical-variant-classification permanent;
     rewrite ^/hela(?:/index.html?|.html?|/)?$ /2013/04/01/the-shock-of-the-new-what-we-can-say-about-helas-novel-variants permanent;
     rewrite ^/how-to-find-poetry-in-shiraz(?:/index.html?|.html?|/)?$ /1998/01/01/poetry permanent;
     rewrite ^/human-genetic-fieldwork-in-iran(?:/index.html?|.html?|/)?$ /1998/01/01/iran-genetics permanent;
+    rewrite ^/humania-research-by-people-about-people-for-people/the-human-geneticist-at-large-notes-from-the-field/how-to-find-poetry-in-shiraz(?:/index.html?|.html?|/)?$ /1998/01/01/poetry permanent;
+    rewrite ^/humania-research-by-people-about-people-for-people/the-human-geneticist-at-large-notes-from-the-field/human-genetic-diversity-fieldwork-in-iran/(?:index.html?)?$ /1998/01/01/iran-genetics permanent;
+    rewrite ^/humania-research-by-people-about-people-for-people/the-human-geneticist-at-large-notes-from-the-field/st-louis-to-samarkand-a-tale-of-two-chromosomes(?:/index.html?|.html?|/)?$ /1998/01/01/st-louis-to-samarkand-a-tale-of-two-chromosomes permanent;
+    rewrite ^/humania-research-by-people-about-people-for-people/the-human-geneticist-at-large-notes-from-the-field/st-louis-to-samarkand(?:/index.html?|.html?|/)?$ /1998/01/01/st-louis-to-samarkand-a-tale-of-two-chromosomes permanent;
+    rewrite ^/humania-research-by-people-about-people-for-people/the-human-geneticist-at-large-notes-from-the-field/yurt-life(?:/index.html?|.html?|/)?$ /1998/01/01/yurt-life permanent;
+    rewrite ^/humania-research-by-people-about-people-for-people/whats-in-a-surname(?:/index.html?|.html?|/)?$ /2009/03/11/whats-in-a-surename permanent;
     rewrite ^/in-a-word-polymorphism(?:/index.html?|.html?|/)?$ /2009/05/01/polymorphism-i permanent;
     rewrite ^/index.html?$ / permanent;
     rewrite ^/iran-genetics(?:/index.html?|.html?|/)?$ /1998/01/01/iran-genetics permanent;
@@ -183,8 +197,33 @@ server {
     rewrite ^/rare-variants-and-health(?:/index.html?|.html?|/)?$ /2012/05/28/rare-variants-disease-and-population-size permanent;
     rewrite ^/rare-variants-disease-and-population-size(?:/index.html?|.html?|/)?$ /2012/05/28/rare-variants-disease-and-population-size permanent;
     rewrite ^/references(?:/index.html?|.html?|/)?$ /2013/08/26/three-small-steps-toward-genomically-sensible-healthcare permanent;
+    rewrite ^/reproductive-technology-article-reproductive-cloning/reproductive-cloning-part1(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-one-the-ballad-of-bill-s-812 permanent;
+    rewrite ^/reproductive-technology-article/cloning-part-four-our-genomes-ourselves(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-four-our-genomes-ourselves permanent;
+    rewrite ^/reproductive-technology-article/cloning-part-one-the-saga-of-bill-s812(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-one-the-ballad-of-bill-s-812 permanent;
+    rewrite ^/reproductive-technology-article/cloning-part-two-hearsay-hearsay(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-two-hearsay-hearsay permanent;
+    rewrite ^/reproductive-technology-article/human-diversity/ethical-concerns-in-studying-human-genetic-diversity(?:/index.html?|.html?|/)?$ /1998/01/01/ethics-in-genome-diversity-fieldwork permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/cloning-epilogue(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-epilogue permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/cloning-part-five-eugenics(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-five-eugenics permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/cloning-part-four-our-genomes-ourselves(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-four-our-genomes-ourselves permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/cloning-part-one-the-ballad-of-bill-s812(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-one-the-ballad-of-bill-s-812 permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/cloning-part-six-poverty-and-exploitation(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-six-poverty-and-exploitation permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/cloning-part-three-eve(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-three-eve permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/cloning-part-two-hearsay-hearsay(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-two-hearsay-hearsay permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/reproductive-cloning-epilogue(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-epilogue permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/reproductive-cloning-intro(?:/index.html?|.html?|/)?$ /2009/03/10/the-new-emperors-clones-obamas-refreshing-but-tepid-embrace-of-reasoned-scitech-policy permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/reproductive-cloning-part1(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-one-the-ballad-of-bill-s-812 permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/reproductive-cloning-part2(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-two-hearsay-hearsay permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/reproductive-cloning-part3(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-three-eve permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/reproductive-cloning-part4(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-four-our-genomes-ourselves permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/reproductive-cloning-part5(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-five-eugenics permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/reproductive-cloning-part6(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-six-poverty-and-exploitation permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/reproductive-cloniong-part6(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-six-poverty-and-exploitation permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/reproductive-technology-article/reproductive-cloning/reproductive-cloning-part6(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-six-poverty-and-exploitation permanent;
+    rewrite ^/reproductive-technology-article/reproductive-cloning/the-new-emperors-clones-obamas-refreshing-but-tepid-embrace-of-reasoned-scitech-policy(?:/index.html?|.html?|/)?$ /2009/03/10/the-new-emperors-clones-obamas-refreshing-but-tepid-embrace-of-reasoned-scitech-policy permanent;
+    rewrite ^/reproductive-technology-article/the-new-emperor’s-clones-obama’s-refreshing-but-tepid-embrace-of-reasoned-scitech-policy(?:/index.html?|.html?|/)?$ /2009/03/10/the-new-emperors-clones-obamas-refreshing-but-tepid-embrace-of-reasoned-scitech-policy permanent;
     rewrite ^/second-life(?:/index.html?|.html?|/)?$ /2009/03/15/second-life permanent;
     rewrite ^/st-louis-to-samarkand-a-tale-of-two-chromosomes(?:/index.html?|.html?|/)?$ /1998/01/01/st-louis-to-samarkand-a-tale-of-two-chromosomes permanent;
+    rewrite ^/technology-how-we-look-at-dna/third-generation-genome-sequencing(?:/index.html?|.html?|/)?$ /2012/08/30/third-generation-sequencing permanent;
     rewrite ^/the-myriad-throng-human-effective-population-size(?:/index.html?|.html?|/)?$ /2012/06/24/the-myriad-throng-human-effective-population-size permanent;
     rewrite ^/the-new-emperors-clones-obamas-refreshing-but-tepid-embrace-of-reasoned-scitech-policy(?:/index.html?|.html?|/)?$ /2009/03/10/the-new-emperors-clones-obamas-refreshing-but-tepid-embrace-of-reasoned-scitech-policy permanent;
     rewrite ^/the-shock-of-the-new-what-we-can-say-about-helas-novel-variants(?:/index.html?|.html?|/)?$ /2013/04/01/the-shock-of-the-new-what-we-can-say-about-helas-novel-variants permanent;
