add category redirects

--- a/nginx/config/genomena.conf
+++ b/nginx/config/genomena.conf
@@ -154,7 +154,18 @@ server {
     rewrite ^/2014/04/06/threesomics(?:/index.html?|.html?|/)$ /2014/04/06/threesomics permanent;
     rewrite ^/about-genomenacom(?:/index.html?|.html?|/)?$ /about permanent;
     rewrite ^/about(?:/index.html?|.html?|/)$ /about permanent;
+    rewrite ^/author/npearson(?:/index.html?|.html?|/)$ /author/npearson permanent;
+    rewrite ^/author/npearson/page/2(?:/index.html?|.html?|/)$ /author/npearson/page/2 permanent;
+    rewrite ^/author/npearson/page/3(?:/index.html?|.html?|/)$ /author/npearson/page/3 permanent;
     rewrite ^/cancers(?:/index.html?|.html?|/)?$ /2012/04/19/why-cancers-are-the-least-and-most-genetic-of-diseases permanent;
+    rewrite ^/category/evolution-101(?:/index.html?|.html?|/)$ /category/evolution-101 permanent;
+    rewrite ^/category/genetics-evolution-and-policy(?:/index.html?|.html?|/)$ /category/genetics-evolution-and-policy permanent;
+    rewrite ^/category/genetics-evolution-and-policy/page/2(?:/index.html?|.html?|/)$ /category/genetics-evolution-and-policy/page/2 permanent;
+    rewrite ^/category/genomes-and-health(?:/index.html?|.html?|/)$ /category/genomes-and-health permanent;
+    rewrite ^/category/human-population-history(?:/index.html?|.html?|/)$ /category/human-population-history permanent;
+    rewrite ^/category/humania-research-by-people-about-people-for-people(?:/index.html?|.html?|/)$ /category/humania-research-by-people-about-people-for-people permanent;
+    rewrite ^/category/technology-how-we-look-at-dna(?:/index.html?|.html?|/)$ /category/technology-how-we-look-at-dna permanent;
+    rewrite ^/category/uncategorized(?:/index.html?|.html?|/)$ /category/uncategorized permanent;
     rewrite ^/cloning-epilogue(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-epilogue permanent;
     rewrite ^/cloning-part-five-eugenics(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-five-eugenics permanent;
     rewrite ^/cloning-part-four-identity(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-four-our-genomes-ourselves permanent;
@@ -164,13 +175,17 @@ server {
     rewrite ^/cloning-part-six-poverty-and-exploitation(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-six-poverty-and-exploitation permanent;
     rewrite ^/cloning-part-three-eve(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-three-eve permanent;
     rewrite ^/cloning-part-two-hearsay-hearsay(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-two-hearsay-hearsay permanent;
+    rewrite ^/concepts-genetics-jargon(?:/index.html?|.html?|/)?$ /category/evolution-101 permanent;
     rewrite ^/concepts-genetics-jargon/polymorphism-2/polymorphism-iii(?:/index.html?|.html?|/)?$ /2009/04/21/on-polymorphism-iii-working-with-peanuts permanent;
     rewrite ^/concepts-genetics-jargon/polymorphism-ii(?:/index.html?|.html?|/)?$ /2009/04/20/on-polymorphism-ii-hard-drinking-fruitflies permanent;
     rewrite ^/concepts-genetics-jargon/polymorphism-iii(?:/index.html?|.html?|/)?$ /2009/04/21/on-polymorphism-iii-working-with-peanuts permanent;
     rewrite ^/concepts-genetics-jargon/polymorphism(?:/index.html?|.html?|/)?$ /2009/05/01/polymorphism-i permanent;
     rewrite ^/concepts-genetics-jargon/second-life(?:/index.html?|.html?|/)?$ /2009/03/15/second-life permanent;
     rewrite ^/ethics-in-genome-diversity-fieldwork(?:/index.html?|.html?|/)?$ /1998/01/01/ethics-in-genome-diversity-fieldwork permanent;
+    rewrite ^/evolution-101(?:/index.html?|.html?|/)?$ /category/evolution-101 permanent;
+    rewrite ^/genetics-evolution-and-policy(?:/index.html?|.html?|/)?$ /category/genetics-evolution-and-policy permanent;
     rewrite ^/genodicy(?:/index.html?|.html?|/)?$ /2013/03/15/genodicy permanent;
+    rewrite ^/genomes-and-health(?:/index.html?|.html?|/)?$ /category/genomes-and-health permanent;
     rewrite ^/genomes-and-health/on-twins-genomes-and-health(?:/index.html?|.html?|/)?$ /2012/04/04/on-twins-genomes-and-health permanent;
     rewrite ^/genomes-and-health/rare-variants-disease-and-population-size(?:/index.html?|.html?|/)?$ /2012/05/28/rare-variants-disease-and-population-size permanent;
     rewrite ^/genomes-and-health/why-cancers-are-the-least-and-most-genetic-of-diseases(?:/index.html?|.html?|/)?$ /2012/04/19/why-cancers-are-the-least-and-most-genetic-of-diseases permanent;
@@ -179,6 +194,8 @@ server {
     rewrite ^/hela(?:/index.html?|.html?|/)?$ /2013/04/01/the-shock-of-the-new-what-we-can-say-about-helas-novel-variants permanent;
     rewrite ^/how-to-find-poetry-in-shiraz(?:/index.html?|.html?|/)?$ /1998/01/01/poetry permanent;
     rewrite ^/human-genetic-fieldwork-in-iran(?:/index.html?|.html?|/)?$ /1998/01/01/iran-genetics permanent;
+    rewrite ^/human-population-history(?:/index.html?|.html?|/)?$ /category/human-population-history permanent;
+    rewrite ^/humania-research-by-people-about-people-for-people(?:/index.html?|.html?|/)?$ /category/humania-research-by-people-about-people-for-people permanent;
     rewrite ^/humania-research-by-people-about-people-for-people/the-human-geneticist-at-large-notes-from-the-field/how-to-find-poetry-in-shiraz(?:/index.html?|.html?|/)?$ /1998/01/01/poetry permanent;
     rewrite ^/humania-research-by-people-about-people-for-people/the-human-geneticist-at-large-notes-from-the-field/human-genetic-diversity-fieldwork-in-iran/(?:index.html?)?$ /1998/01/01/iran-genetics permanent;
     rewrite ^/humania-research-by-people-about-people-for-people/the-human-geneticist-at-large-notes-from-the-field/st-louis-to-samarkand-a-tale-of-two-chromosomes(?:/index.html?|.html?|/)?$ /1998/01/01/st-louis-to-samarkand-a-tale-of-two-chromosomes permanent;
@@ -198,6 +215,7 @@ server {
     rewrite ^/rare-variants-disease-and-population-size(?:/index.html?|.html?|/)?$ /2012/05/28/rare-variants-disease-and-population-size permanent;
     rewrite ^/references(?:/index.html?|.html?|/)?$ /2013/08/26/three-small-steps-toward-genomically-sensible-healthcare permanent;
     rewrite ^/reproductive-technology-article-reproductive-cloning/reproductive-cloning-part1(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-one-the-ballad-of-bill-s-812 permanent;
+    rewrite ^/reproductive-technology-article(?:/index.html?|.html?|/)?$ /category/genetics-evolution-and-policy permanent;
     rewrite ^/reproductive-technology-article/cloning-part-four-our-genomes-ourselves(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-four-our-genomes-ourselves permanent;
     rewrite ^/reproductive-technology-article/cloning-part-one-the-saga-of-bill-s812(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-one-the-ballad-of-bill-s-812 permanent;
     rewrite ^/reproductive-technology-article/cloning-part-two-hearsay-hearsay(?:/index.html?|.html?|/)?$ /2009/03/10/cloning-part-two-hearsay-hearsay permanent;
@@ -223,6 +241,9 @@ server {
     rewrite ^/reproductive-technology-article/the-new-emperor’s-clones-obama’s-refreshing-but-tepid-embrace-of-reasoned-scitech-policy(?:/index.html?|.html?|/)?$ /2009/03/10/the-new-emperors-clones-obamas-refreshing-but-tepid-embrace-of-reasoned-scitech-policy permanent;
     rewrite ^/second-life(?:/index.html?|.html?|/)?$ /2009/03/15/second-life permanent;
     rewrite ^/st-louis-to-samarkand-a-tale-of-two-chromosomes(?:/index.html?|.html?|/)?$ /1998/01/01/st-louis-to-samarkand-a-tale-of-two-chromosomes permanent;
+    rewrite ^/tag/genetics(?:/index.html?|.html?|/)?$ /category/genetics-evolution-and-policy permanent;
+    rewrite ^/tag/human-population-history(?:/index.html?|.html?|/)?$ /category/human-population-history permanent;
+    rewrite ^/technology-how-we-look-at-dna(?:/index.html?|.html?|/)?$ /category/technology-how-we-look-at-dna permanent;
     rewrite ^/technology-how-we-look-at-dna/third-generation-genome-sequencing(?:/index.html?|.html?|/)?$ /2012/08/30/third-generation-sequencing permanent;
     rewrite ^/the-myriad-throng-human-effective-population-size(?:/index.html?|.html?|/)?$ /2012/06/24/the-myriad-throng-human-effective-population-size permanent;
     rewrite ^/the-new-emperors-clones-obamas-refreshing-but-tepid-embrace-of-reasoned-scitech-policy(?:/index.html?|.html?|/)?$ /2009/03/10/the-new-emperors-clones-obamas-refreshing-but-tepid-embrace-of-reasoned-scitech-policy permanent;
