--- a/nginx/config/genomena.conf
+++ b/nginx/config/genomena.conf
@@ -262,7 +262,7 @@ server {
     try_files $uri $uri.html $uri/index.html =404;
   }
 
-  #error_page  404 /404.html;
+  error_page 404 /404.html;
 
   # redirect server error pages to the static page /50x.html
   #error_page 500 502 503 504 /50x.html;
