fix iran-genetics redirect

--- a/nginx/config/genomena.conf
+++ b/nginx/config/genomena.conf
@@ -197,7 +197,7 @@ server {
     rewrite ^/human-population-history(?:/index.html?|.html?|/)?$ /category/human-population-history permanent;
     rewrite ^/humania-research-by-people-about-people-for-people(?:/index.html?|.html?|/)?$ /category/humania-research-by-people-about-people-for-people permanent;
     rewrite ^/humania-research-by-people-about-people-for-people/the-human-geneticist-at-large-notes-from-the-field/how-to-find-poetry-in-shiraz(?:/index.html?|.html?|/)?$ /1998/01/01/poetry permanent;
-    rewrite ^/humania-research-by-people-about-people-for-people/the-human-geneticist-at-large-notes-from-the-field/human-genetic-diversity-fieldwork-in-iran/(?:index.html?)?$ /1998/01/01/iran-genetics permanent;
+    rewrite ^/humania-research-by-people-about-people-for-people/the-human-geneticist-at-large-notes-from-the-field/human-genetic-diversity-fieldwork-in-iran(?:/index.html?|.html?|/)?$ /1998/01/01/iran-genetics permanent;
     rewrite ^/humania-research-by-people-about-people-for-people/the-human-geneticist-at-large-notes-from-the-field/st-louis-to-samarkand-a-tale-of-two-chromosomes(?:/index.html?|.html?|/)?$ /1998/01/01/st-louis-to-samarkand-a-tale-of-two-chromosomes permanent;
     rewrite ^/humania-research-by-people-about-people-for-people/the-human-geneticist-at-large-notes-from-the-field/st-louis-to-samarkand(?:/index.html?|.html?|/)?$ /1998/01/01/st-louis-to-samarkand-a-tale-of-two-chromosomes permanent;
     rewrite ^/humania-research-by-people-about-people-for-people/the-human-geneticist-at-large-notes-from-the-field/yurt-life(?:/index.html?|.html?|/)?$ /1998/01/01/yurt-life permanent;
