add ssl to nginx config

--- a/nginx/config/genomena.conf
+++ b/nginx/config/genomena.conf
@@ -1,6 +1,10 @@
 server {
-  listen       80;
-  server_name  _;
+  listen 80;
+  listen 443 ssl;
+  server_name www.genomena.com genomena.com;
+
+  ssl_certificate /etc/letsencrypt/live/genomena.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/genomena.com/privkey.pem;
 
   #access_log  /var/log/nginx/log/host.access.log  main;
 
